--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
     <p>&nbsp;</p>
       <div>
-     We conduct experiments on the emotional speech dataset (ESD). The dataset consists of 350 parallel utterances with an average duration of 2.9 seconds recorded by 10 native Mandarin speakers and 10 native English speakers. For each speaker, the corpus consists of five emotions as follows: happy, sad, neutral, angry, and surprised. In this paper, we only consider the Mandarin speakers in emotional dataset. For each speaker, we conduct emotion conversion from neutral to happy (N2H), neutral to angry (N2A), neutral to sad (N2S1), and neutral to surprised (N2S2). For each pair, we split the corpus into training set (330 samples) and testing set (20 samples). To make sure that our proposed model is trained under non-parallel conditions, we randomly shuffle the training set and construct non-
-parallel utterances for each training batch.
+     We conduct experiments on the emotional speech dataset (ESD). The dataset consists of 350 parallel utterances with an average duration of 2.9 seconds recorded by 10 native Mandarin speakers and 10 native English speakers. For each speaker, the corpus consists of five emotions as follows: happy, sad, neutral, angry, and surprised. In this paper, we only consider the Mandarin speakers in emotional dataset. For each speaker, we conduct emotion conversion from neutral to happy (N2H), neutral to angry (N2A), neutral to sad (N2S1), and neutral to surprised (N2S2). For each pair, we split the corpus into training set (330 samples) and testing set (20 samples). To make sure that our proposed model is trained under non-parallel conditions, we randomly shuffle the training set and construct non-parallel utterances for each training batch.
 
       <p>&nbsp;</p>
 
